--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-springboot-app:latest
+        image: 767397879709.dkr.ecr.eu-north-1.amazonaws.com/mydockerrepoecr:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
